New flow: home action list, Submit online application, Fill out application

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Permitting Agent - optional env (CLI can use flags instead)
+# Flask session (required for multi-step flows in production)
+# SECRET_KEY=your-secret-key-here
+
 # Portal credentials - only used if user supplies; never scrape behind login without these
 # PORTAL_USER=
 # PORTAL_PASSWORD=
