--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ playwright>=1.40
 pypdf>=3.0
 python-docx>=1.0
 httpx>=0.25
+beautifulsoup4>=4.12
 robotexclusionrulesparser>=1.7
 structlog>=23.0
 rich>=13.0
